[project]
name = "lesson-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Михаил Кулиш",email = "mvkulish@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "lesson_2", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
